--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Stuy Fusion 479
+subtitle: FIRST Tech Challenge Team 479 from Stuyvesant High School
 use-site-title: true
 ---
 
