main page edit 1

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ subtitle: FIRST Tech Challenge Team 479 from Stuyvesant High School
 use-site-title: true
 ---
 <main>
-  <img src="img\avatar-icon.jpg">
+  <img src="img\avatar-icon.png" class="center">
 </main>
 <div class="posts-list">
   {% for post in paginator.posts %}
