--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@ use-site-title: true
 ---
 
 <heading>
-  <h1>Stuy Fusion 479</h1>
-  <h2 style="font-style: italic;">FIRST Tech Challenge Team 479 from Stuyvesant High School</h2>
-</heading>
+  <div class="goon">
+    <h1>Stuy Fusion 479</h1>
+    <h2 style="font-style: italic;">FIRST Tech Challenge Team 479 from Stuyvesant High School</h2>
+  </div>
+  </heading>
 <main>
   <img src="img\avatar-icon.png" class="center">
   <
