--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@ use-site-title: true
 
 <heading>
   <div class="goon">
-    <h1>Stuy Fusion 479</h1>
-    <h2 style="font-style: italic;">FIRST Tech Challenge Team 479 from Stuyvesant High School</h2>
+    <div class="goonpos">
+      <h1>Stuy Fusion 479</h1>
+      <h4 style="font-style: italic;">FIRST Tech Challenge Team 479 from Stuyvesant High School</h4>
+    </div>
   </div>
   </heading>
 <main>
