--- a/index.html
+++ b/index.html
@@ -2,17 +2,12 @@
 layout: page
 use-site-title: true
 ---
-
-<heading>
-  <div class="goon">
-    <div class="goonpos">
-      <h1>Stuy Fusion 479</h1>
-      <h4 style="font-style: italic;">FIRST Tech Challenge Team 479 from Stuyvesant High School</h4>
-    </div>
-  </div>
-  </heading>
 <main>
-  <img src="img\avatar-icon.png" class="center">
+  <div class="center">
+    <img src="img\avatar-icon.png">
+    <h1>Stuy Fusion 479</h1>
+    <h4 style="font-style: italic;">FIRST Tech Challenge Team 479 from Stuyvesant High School</h4>
+  </div>
 </main>
 
 <div class="posts-list">
