--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@ use-site-title: true
 ---
 
 <heading>
-  <div class="goon">
+  <div>
+    <div class="goon">
+    </div>
     <div class="goonpos">
       <h1>Stuy Fusion 479</h1>
       <h4 style="font-style: italic;">FIRST Tech Challenge Team 479 from Stuyvesant High School</h4>
