--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@ use-site-title: true
   </heading>
 <main>
   <img src="img\avatar-icon.png" class="center">
+  <br>
+  <p class="center goonpos" style="font-family:monospace;font-style:italic;"> 
+    Stuy Fusion 479 is a part of the Stuyvesant Robotics organization
+    devoted to building and programming robots for the FTC competition.
+    Over the course of the school year, we construct and program an innovative
+    robot to compete and later demo with, while raising funds and spreading the
+    ideals of FIRST to our community.
+  </p>
 </main>
+
 
 <div class="posts-list">
   {% for post in paginator.posts %}
