--- a/index.html
+++ b/index.html
@@ -4,18 +4,34 @@ use-site-title: true
 ---
 
 <heading>
-  <div class="box">
-    <div class="goon">
-    </div>
-    <div class="goonpos">
-      <h1>Stuy Fusion 479</h1>
-      <h4 style="font-style: italic;">FIRST Tech Challenge Team 479 from Stuyvesant High School</h4>
-    </div>
-  </div>
   </heading>
 <main>
-  <img src="img\avatar-icon.png" class="center">
+
+  <!--Section 1 Carousel-->
+<h1>Stuy Fusion 479<small>FIRST Tech Challenge Team 479 from Stuyvesant High School</small></h1>
+
+<!-- You can add more ".slideshow-image" elements, but remember to update the "$items" variable on SCSS -->
+<div class="slideshow">
+  <div class="slideshow-image" style="background-image: url('https://media.discordapp.net/attachments/937920217525399612/938165570833096814/freight.jpg?width=885&height=663')"></div>
+  <div class="slideshow-image" style="background-image: url('https://media.discordapp.net/attachments/937920217525399612/938165547022049360/team_one.jpg?width=885&height=664')"></div>
+  <div class="slideshow-image" style="background-image: url('https://media.discordapp.net/attachments/937920217525399612/938165570833096814/freight.jpg?width=885&height=663')"></div>
+  <div class="slideshow-image" style="background-image: url('https://media.discordapp.net/attachments/937920217525399612/938165547022049360/team_one.jpg?width=885&height=664')"></div>
+</div>
 </main>
+
+
+<!--Section 2 Stuy Fusion and Statement-->
+<div>
+<img src="img\avatar-icon.png" class="center">
+</div>
+<!--Section 3 Intro to Freight Frenzy-->
+
+<!--Section 4 Meeting Notes-->
+ 
+<!--Section 5 Meet the Team-->
+
+<!--Footer at the Bottom-->
+
 
 <div class="posts-list">
   {% for post in paginator.posts %}
