--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ use-site-title: true
 ---
 
 <heading>
+  <link rel='stylesheet' href="fusion479.github.io\css\main.css"
   </heading>
 <main>
   <!--Section 1 Carousel-->
