--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@ use-site-title: true
 </div>
 </main>
 
-
+<div class="box">
 <!--Section 2 Stuy Fusion and Statement-->
 <div>
 <img src="img\avatar-icon.png" class="center">
 <br>
-  <p class="center goonpos" style="font-family:monospace;font-style:italic;"> 
-    Stuy Fusion 479 is a part of the Stuyvesant Robotics organization
+  <p style="font-family:monospace;font-style:italic;"> 
+      Stuy Fusion 479 is a part of the Stuyvesant Robotics organization
     devoted to building and programming robots for the FTC competition.
     Over the course of the school year, we construct and program an innovative
     robot to compete and later demo with, while raising funds and spreading the
@@ -106,3 +106,4 @@ use-site-title: true
   {% endif %}
 </ul>
 {% endif %}
+</div>
