--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ use-site-title: true
   </heading>
 <main>
   <!--Section 1 Carousel-->
-<h1>Stuy Fusion 479<small>FIRST Tech Challenge Team 479 from Stuyvesant High School</small></h1>
+<h2>Stuy Fusion 479<small>FIRST Tech Challenge Team 479 from Stuyvesant High School</small></h2>
 
 <!-- You can add more ".slideshow-image" elements, but remember to update the "$items" variable on SCSS -->
 <div class="slideshow">
-  <div class="slideshow-image" style="background-image: url('https://media.discordapp.net/attachments/937920217525399612/938165570833096814/freight.jpg?width=885&height=663')"></div>
+  <div class="slideshow-image" style="background-image: url('https://media.discordapp.net/attachments/937920217525399612/938205221522382879/freight.png?width=885&height=663')"></div>
   <div class="slideshow-image" style="background-image: url('https://media.discordapp.net/attachments/937920217525399612/938165547022049360/team_one.jpg?width=885&height=664')"></div>
   <div class="slideshow-image" style="background-image: url('https://media.discordapp.net/attachments/937920217525399612/938165570833096814/freight.jpg?width=885&height=663')"></div>
   <div class="slideshow-image" style="background-image: url('https://media.discordapp.net/attachments/937920217525399612/938165547022049360/team_one.jpg?width=885&height=664')"></div>
