--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@ use-site-title: true
   </heading>
 <main>
   <!--Section 1 Carousel-->
-<h2>Stuy Fusion 479<small>FIRST Tech Challenge Team 479 from Stuyvesant High School</small></h2>
-
+<div>
+  <h3 style='font-size: 60px;'>
+    STUY FUSION 479<small>FIRST Tech Challenge Team 479 from Stuyvesant High School</small>
+  <a href="#section2">
+    <div class="arrow"></div>
+  </a>
+  </h3>
+</div>
 <!-- You can add more ".slideshow-image" elements, but remember to update the "$items" variable on SCSS -->
-<div class="slideshow">
+<div class="slideshow" id="section1">
   <div class="slideshow-image" style="background-image: url('https://media.discordapp.net/attachments/937920217525399612/938205221522382879/freight.png?width=885&height=663')"></div>
   <div class="slideshow-image" style="background-image: url('https://media.discordapp.net/attachments/937920217525399612/938165547022049360/team_one.jpg?width=885&height=664')"></div>
   <div class="slideshow-image" style="background-image: url('https://media.discordapp.net/attachments/937920217525399612/938165570833096814/freight.jpg?width=885&height=663')"></div>
@@ -19,7 +25,7 @@ use-site-title: true
 </div>
 </main>
 
-<div class="box">
+<div class="box" id="section2">
 <!--Section 2 Stuy Fusion and Statement-->
 <div>
 <img src="img\avatar-icon.png" class="center">
@@ -31,6 +37,9 @@ use-site-title: true
     robot to compete and later demo with, while raising funds and spreading the
     ideals of FIRST to our community.
   </p>
+  <a href="#section2">
+    <div class="arrow"></div>
+  </a>
 </div>
 <!--Section 3 Intro to Freight Frenzy-->
 
