"mobile compatibility" test

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ use-site-title: true
 <main>
   <!--Section 1 Carousel-->
 <div>
-  <h3 style='font-size: 60px;'>
+  <h3 style='font-size: 3.75em;'>
     STUY FUSION 479<small>FIRST Tech Challenge Team 479 from Stuyvesant High School</small>
   <a href="#479">
     <div class="arrow"></div>
