section 3 without bs render editing- i hope you're happy barnatt

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ use-site-title: true
 <div>
 <img src="img\avatar-icon.png" class="center">
 <br><br><br>
-  <p style="font-family:monospace;font-style:italic;"> 
+  <p style="font-family:monospace;font-style:italic;">
       Stuy Fusion 479 is a part of the Stuyvesant Robotics organization
     devoted to building and programming robots for the FTC competition.
     Over the course of the school year, we construct and program an innovative
@@ -41,9 +41,41 @@ use-site-title: true
 </div>
 </div>
 <!--Section 3 Intro to Freight Frenzy-->
+<div style="float:left;display:flex;flex-direction:row;align-items:center;">
+  <div style="width:500px;height:300px;">
+  <img src="img/shipping-hub.svg" alt="Shipping Hub" style="width:100%;height:auto;">
+  </div>
+</div>
+<p style="font-family:Coves-Light;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dui accumsan sit amet nulla facilisi. Eget mi proin sed libero enim sed faucibus. Pellentesque dignissim enim sit amet venenatis urna cursus. Dui nunc mattis enim ut tellus elementum sagittis. Bibendum at varius vel pharetra vel turpis nunc eget lorem. Magna ac placerat vestibulum lectus mauris. Sociis natoque penatibus et magnis dis parturient montes nascetur ridiculus. Hac habitasse platea dictumst vestibulum rhoncus est pellentesque. Sit amet luctus venenatis lectus magna fringilla. Eget mi proin sed libero enim. Morbi tristique senectus et netus. Netus et malesuada fames ac turpis. At auctor urna nunc id cursus. Et magnis dis parturient montes nascetur ridiculus mus mauris vitae. Amet mattis vulputate enim nulla aliquet. Diam sit amet nisl suscipit adipiscing bibendum est ultricies integer. In fermentum posuere urna nec tincidunt praesent semper feugiat.</p>
+<br> <br>
+<div style="margin:auto;font-family:Coves-Light;">
+  The world of transport is undergoing some of the greatest changes of its time, all the while natural disasters,
+humanitarian crises, and food shortages are happening all around us. Of all the technological advances
+continuously inserted into our daily lives, which ones will help us transport hard to move goods and solve these
+global challenges?
+<br> <br>
+Providing basic needs are necessary for cultivating a safe and more equitable world. But doing so can be quite
+complex. Our world depends on a strong transportation system to get essential items into the hands of those
+who need it most and move those in danger to safety. When our transportation networks improve with
+efficiency and scale, our people, our animals, and our livelihoods prevail.
+<br> <br>
+The future of transporting relief to those in need is about inventing creative solutions, pushed by the
+recognition of the inefficiencies, inequities, and the choices we make around them.
+<br> <br>
+Will we be able to work together and deliver a solution in the race against time? Only time will tell. A better,
+safer world is possible.
+<br> <br>
+  <a href="https://www.firstinspires.org/sites/default/files/uploads/resource_library/ftc/game-manual-part-2-traditional.pdf" style="font-style:italic;color:gray;">
+    Taken from Freight Frenzy Game Manual
+  </a>
+  <div style="text-align:center;">
+    <a href="freightfrenzy"> <h1>Freight Frenzy</h1> </a>
+  </div>
+</div>
+<br>
 
 <!--Section 4 Meeting Notes-->
- 
+
 <!--Section 5 Meet the Team-->
 
 <!--Footer at the Bottom-->
