--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ use-site-title: true
   <div class="slideshow-image" style="background-image: url('https://media.discordapp.net/attachments/937920217525399612/938165570833096814/freight.jpg?width=885&height=663')"></div>
   <div class="slideshow-image" style="background-image: url('https://media.discordapp.net/attachments/937920217525399612/938165547022049360/team_one.jpg?width=885&height=664')"></div>
 </div>
-<h3 style='font-size: 3.75vw;'>
+<h3 style='font-size: 3.75em;'>
   STUY FUSION 479<small>FIRST Tech Challenge Team 479 from Stuyvesant High School</small>
 <a href="#479">
   <div class="arrow"></div>
