--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ use-site-title: true
   </heading>
 <main>
   <!--Section 1 Carousel-->
-<div>
+<div style="position: relative;">
 <!-- You can add more ".slideshow-image" elements, but remember to update the "$items" variable on SCSS -->
 <div class="slideshow" id="section1">
   <div class="slideshow-image" style="background-image: url('https://media.discordapp.net/attachments/937920217525399612/938205221522382879/freight.png?width=885&height=663')"></div>
@@ -17,11 +17,13 @@ use-site-title: true
   <div class="slideshow-image" style="background-image: url('https://media.discordapp.net/attachments/937920217525399612/938165570833096814/freight.jpg?width=885&height=663')"></div>
   <div class="slideshow-image" style="background-image: url('https://media.discordapp.net/attachments/937920217525399612/938165547022049360/team_one.jpg?width=885&height=664')"></div>
 </div>
-<h3 style='font-size: 3.75em;'>
+<div class="h3mid">
+<h3>
   STUY FUSION 479<small>FIRST Tech Challenge Team 479 from Stuyvesant High School</small>
 <a href="#479">
   <div class="arrow"></div>
 </a>
+</div>
 </h3>
 </div>
 </main>
