--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ use-site-title: true
 </main>
 
 <div class="box" id="479">
-<!--Section 2 Stuy Fusion and Staatement-->
+<!--Section 2 Stuy Fusion and Statement-->
 <div>
 <img src="img\avatar-icon.png" class="center">
 <br><br><br>
