--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ use-site-title: true
   </p>
 </div>
 </div>
-<!--Section 3 Intro to Freight Frenzy-->
+<!--Section 3 Intro to Freight Frenzzy-->
 
 <!--Section 4 Meeting Notes-->
  
