--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ use-site-title: true
 <div>
 <img src="img\avatar-icon.png" class="center">
 <br><br><br>
-  <p style="font-family:monospace;font-style:italic;"> 
+  <p style="font-family:Coves;font-style:italic;font-size: 2em"> 
       Stuy Fusion 479 is a part of the Stuyvesant Robotics organization
     devoted to building and programming robots for the FTC competition.
     Over the course of the school year, we construct and program an innovative
