--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@ use-site-title: true
 <div>
 <img src="img\avatar-icon.png" class="center">
 <br><br><br>
-  <p style="font-family:Coves;font-style:italic;font-size: 2em"> 
-      Stuy Fusion 479 is a part of the Stuyvesant Robotics organization
-    devoted to building and programming robots for the FTC competition.
-    Over the course of the school year, we construct and program an innovative
+  <p class="sectioncontent"> 
+    Stuy Fusion 479 is a part of the Stuyvesant Robotics organization
+    devoted to building and programming robots for the FTC competition.<br><br>
+    <small style="line-height: 0.4em;">Over the course of the school year, we construct and program an innovative
     robot to compete and later demo with, while raising funds and spreading the
-    ideals of FIRST to our community.
+    ideals of FIRST to our community.</small>
   </p>
 </div>
 </div>
