--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ use-site-title: true
 <div>
 <img src="img\avatar-icon.png" class="center">
 <br><br><br>
-  <p class="sectioncontent"> 
+  <p class="sectioncontent">
     Stuy Fusion 479 is a part of the Stuyvesant Robotics organization
     devoted to building and programming robots for the FTC competition.<br><br>
     <small style="line-height: 0.4em;">Over the course of the school year, we construct and program an innovative
@@ -43,9 +43,34 @@ use-site-title: true
 </div>
 </div>
 <!--Section 3 Intro to Freight Frenzzy-->
+<div class="section3">
+  <img src="img/ship-hub.svg">
+</div>
+  <br>
+  <div class="box">
+  <p class="sectioncontent">
+  <small style="line-height: 0.4em;">
+  The world of transport is undergoing some of the greatest changes of its time, all the while natural disasters,
+humanitarian crises, and food shortages are happening all around us. Of all the technological advances
+continuously inserted into our daily lives, which ones will help us transport hard to move goods and solve these
+global challenges? </small><br><br>
+<small style="line-height: 0.4em;">
+Providing basic needs are necessary for cultivating a safe and more equitable world. But doing so can be quite
+complex. Our world depends on a strong transportation system to get essential items into the hands of those
+who need it most and move those in danger to safety. When our transportation networks improve with
+efficiency and scale, our people, our animals, and our livelihoods prevail.</small><br><br>
+<small style="line-height: 0.4em;">
+The future of transporting relief to those in need is about inventing creative solutions, pushed by the
+recognition of the inefficiencies, inequities, and the choices we make around them.<br><br>
+Will we be able to work together and deliver a solution in the race against time? Only time will tell. A better,
+safer world is possible.</small>
+  <br><br>
+  </p>
+  <a href="freightfrenzy" style="display:flex;justify-content:center;"> <h1 class="button" style="text-decoration:underline;">Freight Frenzy</h1></a>
+  </div>
 
 <!--Section 4 Meeting Notes-->
- 
+
 <!--Section 5 Meet the Team-->
 
 <!--Footer at the Bottom-->
