--- a/index.html
+++ b/index.html
@@ -43,30 +43,22 @@ use-site-title: true
 </div>
 </div>
 <!--Section 3 Intro to Freight Frenzzy-->
-<div class="section3">
-  <img src="img/ship-hub.svg">
+<div>
+  <div class="backgroundcontainer" style="background-image: url('https://media.discordapp.net/attachments/937920217525399612/939070625497112576/long.jpg?width=1440&height=622');">
   <br>
   <div class="box">
-  <p class="sectioncontent">
-  <small style="line-height: 0.4em;">
-  The world of transport is undergoing some of the greatest changes of its time, all the while natural disasters,
-humanitarian crises, and food shortages are happening all around us. Of all the technological advances
-continuously inserted into our daily lives, which ones will help us transport hard to move goods and solve these
-global challenges? </small><br><br>
-<small style="line-height: 0.4em;">
-Providing basic needs are necessary for cultivating a safe and more equitable world. But doing so can be quite
-complex. Our world depends on a strong transportation system to get essential items into the hands of those
-who need it most and move those in danger to safety. When our transportation networks improve with
-efficiency and scale, our people, our animals, and our livelihoods prevail.</small><br><br>
-<small style="line-height: 0.4em;">
-The future of transporting relief to those in need is about inventing creative solutions, pushed by the
-recognition of the inefficiencies, inequities, and the choices we make around them.<br><br>
-Will we be able to work together and deliver a solution in the race against time? Only time will tell. A better,
-safer world is possible.</small>
+  <p class="sectioncontent" style="color:white;">
+  Freight Frenzy<br>
+  <small> Our approach towards designing our robot has remain unchanged for FTC's Freight Frenzy.
+    Our team follows the industry standard model of design thinking, which consists of brainstorming, prototyping, and refining.  
+    This process allows us to better understand the mechanisms we build, while possessing the flexibity of an open minded mindset and room for improvement.
+  </small>
   <br><br>
+  <a href="freightfrenzy" class="button">Learn More</a>
   </p>
-  <a href="freightfrenzy" style="display:flex;justify-content:center;"> <h1 class="button" style="text-decoration:underline;">Freight Frenzy</h1></a>
   </div>
+</div>
+</div>
 
 <!--Section 4 Meeting Notes-->
 
@@ -75,8 +67,8 @@ safer world is possible.</small>
   <img style="width:35%;height:auto;" src="img/steven.JPG">
   <img style="width:35%;height:auto;" src="img/ish.png">
   <div style="flex-basis:100%;height:0;"></div>
-  <p style="width:35%;height:auto;">At every level of competition, whether it be qualifiers, regionals, or championships, I am always asked a daunting question: What does FIRST mean to you? For me, participating in FTC over the last four years has meant opportunity. The competition has given me the opportunity to demonstrate my love for engineering, whether that be through the cardboard prototypes or intricate CAD designs I make. It has given me the opportunity to contribute and communicate with thousands of FIRST students around the world beyond the scope of robotics. Above all, FIRST has given me the opportunity to become a more holistic individual: a community volunteer, a team leader, and a collaborative innovator. As I leave 479, I hope to inspire the next generation to use FTC as a way to expand on their passions and interests.</p>
-  <p style="width:35%;height:auto;">Before I participated in FTC, passion and community were words I didn’t really understand. I’ll never forget my first day on my robotics team. At first I watched as teammates worked together to screw in pieces of a mechanism and as the programmer typed away on his laptop while others reset the field for another test drive. Everything and everyone moved with a sense of purpose; the flutter of movement resembled the individual parts of a machine, and like a bearing on a shaft, I fit right in.</p>
+  <p style="width:35%;height:auto;">Steven Lei President of 479</p>
+  <p style="width:35%;height:auto;">Ishraq Mahid Vice-President of 479</p>
 </div>
 <!--Footer at the Bottom-->
 
