adjustments before sleeping

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ use-site-title: true
   <div class="backgroundcontainer" style="background-image: url('https://media.discordapp.net/attachments/937920217525399612/939070625497112576/long.jpg?width=1440&height=622');">
   <br>
   <div class="box">
-  <p class="sectioncontent" style="color:white;">
+  <p class="sectioncontent3">
   Freight Frenzy<br>
   <small> Our approach towards designing our robot has remain unchanged for FTC's Freight Frenzy.
     Our team follows the industry standard model of design thinking, which consists of brainstorming, prototyping, and refining.  
