--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@ use-site-title: true
 
   <!--Section 5 Meet the Team-->
   <div class="profilebox sectioncontent5">
-    <p style="font-size: 1.1em; margin-bottom: 0px;">Who Are We?</p>
+    <p style="font-size: 1.1em; margin-bottom: 0px;">Who Are We?<br>
+    <small style="font-size: 0.5em;">We're FTC Team 479, Stuy Fusion. 
+      We are a part of the Stuyvesant Robotics Organization, Stuy Pulse, and have been competing in the FIRST Tech Challenge since 2008.</small></p>
     <div style="display: flex;">
       <div class="profilecircle">
         <img src="img/steven.JPG">
@@ -81,7 +83,7 @@ use-site-title: true
       <p class="profiletext">Ishraq Mahid<br> 
       <small>Vice-President of 479</small></p>
     </div>
-    <a href="bios" class="buttondark">Meet the Rest</a>
+    <a href="bios" class="buttondark">Meet the Team</a>
   </div>
 </div>
 <!--Footer at the Bottom-->
