--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ use-site-title: true
 </div>
 
 <!--Section 5 Meeting Notes-->
-<div class="box" style="margin: 0px; margin-bottom:10%; padding-left: 10%; padding-right: 10%; background-color: gray;">
+<div class="box" style=>
   <h1>
     Meeting Notes
   </h1>
