--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ use-site-title: true
   </div>
 
   <!--Section 4 Meet the Team-->
-  <div class="profilebox sectioncontent5">
+  <div class="profilebox sectioncontent5" style="margin-bottom:5%;">
     <p style="margin-bottom: 0px;">Who Are We?<br>
     <small style="font-size: 0.5em;">We're FTC Team 479, Stuy Fusion. 
       We are a part of the Stuyvesant Robotics Organization, Stuy Pulse, and have been competing in the FIRST Tech Challenge since 2008.</small></p>
@@ -80,12 +80,12 @@ use-site-title: true
       <p class="profiletext">Ishraq Mahid<br> 
       <small>Vice-President of 479</small></p>
     </div>
-    <a href="bios" class="buttondark">Meet the Team</a>
+    <!-- disabled <a href="bios" class="buttondark">Meet the Team</a>-->
   </div>
 </div>
 
-<!--Section 5 Meeting Notes-->
-<div class="box" style=>
+<!--Section 5 Meeting Notes not included-->
+<!--<div class="box" style=>
   <h1>
     Meeting Notes
   </h1>
@@ -139,6 +139,6 @@ use-site-title: true
    </article>
   {% endfor %}
 </div>
-</div>
+</div>-->
 
 <!--Footer at the Bottom-->
