fix image not centered

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ use-site-title: true
 
   <!--Section 2 Stuy Fusion and Statement-->
   <div class="box" id="479">
-    <div style="margin-top: 5%; margin-bottom: 10%">
+    <div style="margin-bottom: 10%">
       <img src="img\avatar-icon.png" class="center">
       <br><br><br>
       <p class="sectioncontent">
